# Sudoku-Algorithms

./: CMakeLists.txt  README.md
approximation-algorithm/include/: util.h
approximation-algorithm/src/: sudokuLFMain.cpp
exact-algorithm/include/: backtracking.h
exact-algorithm/src/: sudokuSolution.cpp  teste.cpp
heuristic/include/: largestFirst.h
heuristic/src/: a.out  sudokuSolution.cpp
include/: largestFirst.h
meta-heuristic/include/: antRLF.h  antSudoku.h  valueSet.h
meta-heuristic/src/: sudokuSolution.cpp
src/: sudokuSolution.cpp
util/: util.h
